# recognition-vk-bot

./: .autoflake.cfg  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  app-docker-compose.yml  pyproject.toml
src/: config.py  srv.py  utils.py
src/modules/: command_system.py  vk_audio.py  vk_graphic.py
src/modules/commands/: info.py  vk_audio.py  vk_graphic.py
src/modules/vk/: flows.py  vk.py
