[tool.poetry]
name = "recognition-vk-bot"
version = "0.1.0"
description = "Бот для Вконтакте"
authors = ["Korzunov Evgeniy <korzunov.e.v@gmail.com>"]
readme = "README.md"
packages = []


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
autoflake = "^2.2.1"
debugpy = "^1.8.0"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
vk-api = "^11.9.9"
aiohttp = "^3.8.6"
pydantic-settings = "^2.0.3"
JSON-log-formatter = "^0.5.2"
